--- a/views/ejs/header.ejs
+++ b/views/ejs/header.ejs
@@ -39,4 +39,7 @@
     <script type="text/javascript" src="plugins/jqueryui/jquery-ui.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="js/obfuscation/licensekey.js"></script>
+    <script type="text/javascript">
+        const depth1 = '<%= depth1 %>';
+    </script>
 </head>
