--- a/views/ejs/left.ejs
+++ b/views/ejs/left.ejs
@@ -40,6 +40,8 @@
                 <li><a href="/sample?depth1=OMS&depth2=장려금/수당관리&sampleId=9" class="depth2 <%= depth1 == 'OMS' && depth2 == '장려금/수당관리' ? 'on' : '' %>"><span>장려금/수당관리</span></a></li>
                 <li><a href="/sample?depth1=OMS&depth2=주간일보관리&sampleId=10" class="depth2 <%= depth1 == 'OMS' && depth2 == '주간일보관리' ? 'on' : '' %>"><span>주간일보관리</span></a></li>
                 <li><a href="/sample?depth1=OMS&depth2=출고요청서&sampleId=11" class="depth2 <%= depth1 == 'OMS' && depth2 == '출고요청서' ? 'on' : '' %>"><span>출고요청서</span></a></li>
+                <li><a href="/sample?depth1=OMS&depth2=출고집계현황&sampleId=19" class="depth2 <%= depth1 == 'OMS' && depth2 == '출고집계현황' ? 'on' : '' %>"><span>출고집계현황</span></a></li>
+                <li><a href="/sample?depth1=OMS&depth2=물류현황&sampleId=16" class="depth2 <%= depth1 == 'OMS' && depth2 == '물류현황' ? 'on' : '' %>"><span>물류현황</span></a></li>
                 <li><a href="/sample?depth1=OMS&depth2=품목위치정보관리&sampleId=20" class="depth2 <%= depth1 == 'OMS' && depth2 == '품목위치정보관리' ? 'on' : '' %>"><span>품목위치정보관리</span></a></li>
                 <li><a href="/sample?depth1=OMS&depth2=배송내역서&sampleId=21" class="depth2 <%= depth1 == 'OMS' && depth2 == '배송내역서' ? 'on' : '' %>"><span>배송내역서</span></a></li>
             </ul>
