--- a/views/ejs/sample1.ejs
+++ b/views/ejs/sample1.ejs
@@ -79,4 +79,4 @@ body {
 }
 </style>
 
-<script src="js/obfuscation/sample1.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample1.js" type="text/javascript"></script>
