--- a/views/ejs/sample11.ejs
+++ b/views/ejs/sample11.ejs
@@ -1,12 +1,12 @@
 <div class="content_top">
     <div class="cont_tit">출고요청서</div>
     <div class="div">
-        <button id="btnChart" class="btn_search">
+        <!-- <button id="btnChart" class="btn_search">
             <span>물류현황</span>
         </button>
         <button id="btnSample19" class="btn_search">
             <span>출고집계현황</span>
-        </button>
+        </button> -->
         <button class="btn_search">
             <i class="ico_srch"></i>
             <span>search</span>
@@ -63,4 +63,4 @@
     overflow: hidden;
 }
 </style>
-<script src="js/obfuscation/sample11.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample11.js" type="text/javascript"></script>
