--- a/views/ejs/sample12.ejs
+++ b/views/ejs/sample12.ejs
@@ -5,7 +5,7 @@
             <span>엑셀 다운로드</span>
         </button>
         <button id="btnGrid" class="btn_search">
-            <span>출고요청서</span>
+            <span>목록</span>
         </button>
         <button class="btn_search">
             <i class="ico_srch"></i>
@@ -71,4 +71,4 @@
    float: left;
 }
 </style>
-<script src="js/obfuscation/sample12.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample12.js" type="text/javascript"></script>
