--- a/views/ejs/sample16.ejs
+++ b/views/ejs/sample16.ejs
@@ -1,9 +1,9 @@
 <div class="content_top">
     <div class="cont_tit">물류현황</div>
     <div class="div">
-        <button id="btnGrid" class="btn_search">
+        <!-- <button id="btnGrid" class="btn_search">
             <span>출고요청서</span>
-        </button>
+        </button> -->
         <button class="btn_search">
             <i class="ico_srch"></i>
             <span>search</span>
@@ -67,4 +67,4 @@
 
 <script src="plugins/wijmo-5.20232.939_KR/Dist/controls/wijmo.chart.min.js" type="text/javascript"></script>
 <script src="plugins/wijmo-5.20232.939_KR/Dist/controls/wijmo.chart.animation.min.js" type="text/javascript"></script>
-<script src="js/obfuscation/sample16.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample16.js" type="text/javascript"></script>
