--- a/views/ejs/sample2.ejs
+++ b/views/ejs/sample2.ejs
@@ -71,4 +71,4 @@
 <script src="plugins/wijmo-5.20232.939_KR/Dist/controls/wijmo.chart.min.js" type="text/javascript"></script>
 <script src="plugins/wijmo-5.20232.939_KR/Dist/controls/wijmo.chart.interaction.min.js" type="text/javascript"></script>
 <script src="plugins/wijmo-5.20232.939_KR/Dist/controls/wijmo.chart.animation.min.js" type="text/javascript"></script>
-<script src="js/obfuscation/sample2.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample2.js" type="text/javascript"></script>
