--- a/views/ejs/sample20.ejs
+++ b/views/ejs/sample20.ejs
@@ -84,4 +84,4 @@
 }
 
 </style>
-<script src="js/obfuscation/sample20.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample20.js" type="text/javascript"></script>
