--- a/views/ejs/sample23.ejs
+++ b/views/ejs/sample23.ejs
@@ -5,7 +5,7 @@
             <span>저장</span>
         </button>
         <button id="btnGrid" class="btn_search">
-            <span>배송내역서</span>
+            <span>목록</span>
         </button>
     </div>
 </div>
@@ -48,4 +48,4 @@ table.srch_tbl {
     border-top: none;
 }
 </style>
-<script src="js/obfuscation/sample23.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample23.js" type="text/javascript"></script>
