--- a/views/ejs/sample3.ejs
+++ b/views/ejs/sample3.ejs
@@ -68,4 +68,4 @@ body {
    float: left;
 }
 </style>
-<script src="js/obfuscation/sample3.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample3.js" type="text/javascript"></script>
