--- a/views/ejs/sample4.ejs
+++ b/views/ejs/sample4.ejs
@@ -11,4 +11,4 @@
     overflow: hidden;
 }
 </style>
-<script src="js/obfuscation/sample4.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample4.js" type="text/javascript"></script>
