--- a/views/ejs/sample6.ejs
+++ b/views/ejs/sample6.ejs
@@ -73,4 +73,4 @@ body {
 }
 
 </style>
-<script src="js/obfuscation/sample6.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample6.js" type="text/javascript"></script>
