--- a/views/ejs/sample7.ejs
+++ b/views/ejs/sample7.ejs
@@ -11,4 +11,4 @@
     overflow: hidden;
 }
 </style>
-<script src="js/obfuscation/sample7.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample7.js" type="text/javascript"></script>
