--- a/views/ejs/layout.ejs
+++ b/views/ejs/layout.ejs
@@ -21,6 +21,11 @@
     </header>
     <div class="container">
       <%- include('left') %> 
+      <div class="content_box_loading" style="display:none;">
+          <div class="div_loading">
+              <img src="../images/loading.png" style="width: 100px;"/>
+          </div>
+      </div>
       <div class="content_wrap">
         <%- body %>
       </div>
