--- a/views/ejs/sample0.ejs
+++ b/views/ejs/sample0.ejs
@@ -1,7 +1,6 @@
 <div class="container" style="margin-top: 0;">
     <div class="spreadSheet">
         <div id="ribbonHost"></div>
-        <!-- <div id="ss"></div> -->
     </div>
 </div>
 
@@ -33,4 +32,4 @@
 }
 </style>
 
-<script src="js/obfuscation/sample0.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample0.js" type="text/javascript"></script>
