--- a/views/ejs/sample10.ejs
+++ b/views/ejs/sample10.ejs
@@ -94,4 +94,4 @@ body {
 }
 
 </style>
-<script src="js/obfuscation/sample10.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample10.js" type="text/javascript"></script>
