--- a/views/ejs/sample13.ejs
+++ b/views/ejs/sample13.ejs
@@ -66,4 +66,4 @@
    float: left;
 }
 </style>
-<script src="js/obfuscation/sample13.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample13.js" type="text/javascript"></script>
