--- a/views/ejs/sample14.ejs
+++ b/views/ejs/sample14.ejs
@@ -2,7 +2,7 @@
     <div class="cont_tit">배송상차관리</div>
     <div class="div">
         <button id="btnGrid" class="btn_search">
-            <span>출고요청서</span>
+            <span>목록</span>
         </button>
         <button class="btn_search">
             <i class="ico_srch"></i>
@@ -106,4 +106,4 @@
 </style>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
-<script src="js/obfuscation/sample14.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample14.js" type="text/javascript"></script>
