--- a/views/ejs/sample15.ejs
+++ b/views/ejs/sample15.ejs
@@ -5,11 +5,11 @@
             <span>엑셀 다운로드</span>
         </button>
         <button id="btnGrid" class="btn_search">
-            <span>출고요청서</span>
+            <span>목록</span>
         </button>
-        <button id="btnGrid2" class="btn_search">
+        <!-- <button id="btnGrid2" class="btn_search">
             <span>배송내역서</span>
-        </button>
+        </button> -->
     </div>
 </div>
 
@@ -29,4 +29,4 @@
 <script type="text/javascript">
     var localStorageIndex = "<%= sample23Index %>";
 </script>
-<script src="js/obfuscation/sample15.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample15.js" type="text/javascript"></script>
