--- a/views/ejs/sample19.ejs
+++ b/views/ejs/sample19.ejs
@@ -1,9 +1,9 @@
 <div class="content_top">
     <div class="cont_tit">출고집계현황</div>
     <div class="div">
-        <button id="btnGrid" class="btn_search">
+        <!-- <button id="btnGrid" class="btn_search">
             <span>출고요청서</span>
-        </button>
+        </button> -->
         <button class="btn_search">
             <i class="ico_srch"></i>
             <span>search</span>
@@ -68,4 +68,4 @@
 }
 
 </style>
-<script src="js/obfuscation/sample19.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample19.js" type="text/javascript"></script>
