--- a/views/ejs/sample21.ejs
+++ b/views/ejs/sample21.ejs
@@ -1,12 +1,12 @@
 <div class="content_top">
     <div class="cont_tit">배송내역서</div>
     <div class="div">
-        <button id="btnEnroll" class="btn_search">
+        <!-- <button id="btnEnroll" class="btn_search">
             <span>신규</span>
         </button>
         <button id="btnTemplate" class="btn_search">
             <span>템플릿</span>
-        </button>
+        </button> -->
         <button class="btn_search">
             <i class="ico_srch"></i>
             <span>search</span>
@@ -49,7 +49,16 @@
     </table>
 </div>
 
-<div class="content_box" style="height: calc(100vh - 360px);">
+<div class="div" style="margin-top: 9px;">
+    <button id="btnEnroll" class="btn_page">
+        <span>신규</span>
+    </button>
+    <button id="btnTemplate" class="btn_page">
+        <span>템플릿</span>
+    </button>
+</div>
+
+<div class="content_box" style="height: calc(100vh - 360px); margin-top: 9px;">
     <div class="sample-tutorial">
         <div id="ss" style="width:100%;height:100%"></div>
     </div>
@@ -62,4 +71,4 @@
     overflow: hidden;
 }
 </style>
-<script src="js/obfuscation/sample21.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample21.js" type="text/javascript"></script>
