--- a/views/ejs/sample5.ejs
+++ b/views/ejs/sample5.ejs
@@ -216,4 +216,4 @@ border: 1px solid #36495e;
 
 </style>
 
-<script src="js/obfuscation/sample5.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample5.js" type="text/javascript"></script>
