--- a/views/ejs/sample8.ejs
+++ b/views/ejs/sample8.ejs
@@ -123,4 +123,4 @@ body {
   right: 0;
 }
 </style>
-<script src="js/obfuscation/sample8.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample8.js" type="text/javascript"></script>
