--- a/views/ejs/sample9.ejs
+++ b/views/ejs/sample9.ejs
@@ -111,4 +111,4 @@ body {
  margin: 0;
 }
 </style>
-<script src="js/obfuscation/sample9.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample9.js" type="text/javascript"></script>
