[국제화(일본)]

--- a/views/ejs/layout.ejs
+++ b/views/ejs/layout.ejs
@@ -31,6 +31,7 @@
       </div>
     </div><!-- //container -->
   </div>
+<script type="text/javascript" src="js/<%= pathJs %>/licensekey.js"></script>
 <script>
   datepicker();
   $('#' + '<%=depth1 %>').addClass('on');
