--- a/views/ejs/left.ejs
+++ b/views/ejs/left.ejs
@@ -46,5 +46,15 @@
                 <li><a href="/sample?depth1=OMS&depth2=배송내역서&sampleId=21" class="depth2 <%= depth1 == 'OMS' && depth2 == '배송내역서' ? 'on' : '' %>"><span>배송내역서</span></a></li>
             </ul>
         </li>
+        <li>
+            <a href="#" class="depth1" id="MAIN_JP"><span>主要機能</span></a>
+            <ul class="depth2_div">
+                <li><a href="/sample?depth1=MAIN_JP&depth2=INTRO&sampleId=24" class="depth2 <%= depth1 == 'MAIN_JP' && depth2 == 'INTRO' ? 'on' : '' %>"><span>INTRO</span></a></li>
+                <li><a href="/sample?depth1=MAIN_JP&depth2=DASHBOARD&sampleId=25" class="depth2 <%= depth1 == 'MAIN_JP' && depth2 == 'DASHBOARD' ? 'on' : '' %>"><span>DASHBOARD</span></a></li>
+                <li><a href="/sample?depth1=MAIN_JP&depth2=しこう スケジュール&sampleId=26" class="depth2 <%= depth1 == 'MAIN_JP' && depth2 == 'しこう スケジュール' ? 'on' : '' %>"><span>しこう スケジュール</span></a></li>
+                <li><a href="/sample?depth1=MAIN_JP&depth2=しゅっこ ようせいしょ&sampleId=27" class="depth2 <%= depth1 == 'MAIN_JP' && depth2 == 'しゅっこ ようせいしょ' ? 'on' : '' %>"><span>しゅっこ ようせいしょ</span></a></li>
+                <li><a href="/sample?depth1=MAIN_JP&depth2=はいそう うちわけしょ&sampleId=28" class="depth2 <%= depth1 == 'MAIN_JP' && depth2 == 'はいそう うちわけしょ' ? 'on' : '' %>"><span>はいそう うちわけしょ</span></a></li>                
+            </ul>
+        </li>
     </ul>
   </div>
