--- a/views/ejs/sample24.ejs
+++ b/views/ejs/sample24.ejs
@@ -32,6 +32,6 @@
 }
 </style>
 
-<script src="plugins/SpreadJS.Release.17.0.2/Designer/Designer Component/scripts/gc.spread.sheets.designer.resource.ko.17.0.2.min.js" type="text/javascript"></script>
+<script src="plugins/SpreadJS.Release.17.0.2/Designer/Designer Component/scripts/gc.spread.sheets.designer.resource.ja.17.0.2.min.js" type="text/javascript"></script>
 <script src="plugins/SpreadJS.Release.17.0.2/Designer/Designer Component/scripts/gc.spread.sheets.designer.all.17.0.2.min.js" type="text/javascript"></script>
-<script src="js/<%= pathJs %>/sample0.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample24.js" type="text/javascript"></script>
