--- a/views/ejs/sample30.ejs
+++ b/views/ejs/sample30.ejs
@@ -1,11 +1,11 @@
 <div class="content_top">
-    <div class="cont_tit">템플릿 관리</div>
+    <div class="cont_tit">テンプレート管理</div>
     <div class="div">
         <button id="btnSave" class="btn_search">
-            <span>저장</span>
+            <span>貯蔵</span>
         </button>
         <button id="btnGrid" class="btn_search">
-            <span>목록</span>
+            <span>目録</span>
         </button>
     </div>
 </div>
@@ -22,15 +22,15 @@
         </colgroup>
         <tbody>
         <tr>
-            <th>템플릿명</th>
+            <th>テンプレート名</th>
             <td>
                 <input id="txtName" type="text" value="">
             </td>
-            <th>파일</th>
+            <th>FILE</th>
             <td>
                 <input id="selectedFile" type="file" name="files[]"accept=".sjs, .xlsx, .xlsm, .ssjson, .json, .csv" />
             </td>
-            <th>적용 템플릿</th>
+            <th>適用テンプレート</th>
             <td>
                 <h2 id="txtTemplateName" style="color: blue; cursor: pointer;"></h2>
             </td>
@@ -161,6 +161,6 @@ label {
 }
 
 </style>
-<script src="plugins/SpreadJS.Release.17.0.2/Designer/Designer Component/scripts/gc.spread.sheets.designer.resource.ko.17.0.2.min.js" type="text/javascript"></script>
+<script src="plugins/SpreadJS.Release.17.0.2/Designer/Designer Component/scripts/gc.spread.sheets.designer.resource.ja.17.0.2.min.js" type="text/javascript"></script>
 <script src="plugins/SpreadJS.Release.17.0.2/Designer/Designer Component/scripts/gc.spread.sheets.designer.all.17.0.2.min.js" type="text/javascript"></script>
-<script src="js/<%= pathJs %>/sample22.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample30.js" type="text/javascript"></script>
