--- a/views/ejs/sample31.ejs
+++ b/views/ejs/sample31.ejs
@@ -1,11 +1,11 @@
 <div class="content_top">
-    <div class="cont_tit">배송내역서 상세</div>
+    <div class="cont_tit">配送明細書の詳細</div>
     <div class="div">
         <button id="btnExcel" class="btn_search">
-            <span>엑셀 다운로드</span>
+            <span>DOWNLOAD</span>
         </button>
         <button id="btnGrid" class="btn_search">
-            <span>목록</span>
+            <span>目録</span>
         </button>
         <!-- <button id="btnGrid2" class="btn_search">
             <span>배송내역서</span>
@@ -27,6 +27,6 @@
 }
 </style>
 <script type="text/javascript">
-    var localStorageIndex23 = "<%= sample23Index %>";
+    var localStorageIndex30 = "<%= sample30Index %>";
 </script>
-<script src="js/<%= pathJs %>/sample15.js" type="text/javascript"></script>
+<script src="js/<%= pathJs %>/sample31.js" type="text/javascript"></script>
