--- a/views/ejs/sample36.ejs
+++ b/views/ejs/sample36.ejs
@@ -11,14 +11,10 @@
     </div>
   </div>
 
-
-<script src="https://cdn.grapecity.com/wijmo/5.20211.781/controls/wijmo.min.js" type="text/javascript"></script>
-<script src="https://cdn.grapecity.com/wijmo/5.20211.781/controls/wijmo.input.min.js" type="text/javascript"></script>
-<script src="https://cdn.grapecity.com/wijmo/5.20211.781/controls/wijmo.grid.min.js" type="text/javascript"></script>
-<script src="https://cdn.grapecity.com/wijmo/5.20211.781/controls/wijmo.grid.filter.min.js" type="text/javascript"></script>
-<script src="https://cdn.grapecity.com/wijmo/5.20211.781/controls/wijmo.grid.sheet.min.js" type="text/javascript"></script>
-<script src="https://cdn.grapecity.com/wijmo/5.20211.781/controls/wijmo.xlsx.min.js" type="text/javascript"></script>
-<script src="https://cdn.grapecity.com/wijmo/5.20211.781/controls/wijmo.grid.xlsx.min.js" type="text/javascript"></script>
+<script src="plugins/wijmo-5.20232.939_KR/Dist/controls/wijmo.grid.filter.min.js" type="text/javascript"></script>
+<script src="plugins/wijmo-5.20232.939_KR/Dist/controls/wijmo.grid.sheet.min.js" type="text/javascript"></script>
+<script src="plugins/wijmo-5.20232.939_KR/Dist/controls/wijmo.xlsx.min.js" type="text/javascript"></script>
+<script src="plugins/wijmo-5.20232.939_KR/Dist/controls/wijmo.grid.xlsx.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.5.0/jszip.min.js" type="text/javascript"></script>
 <style>
 .wj-flexsheet {
