--- a/views/ejs/layout.ejs
+++ b/views/ejs/layout.ejs
@@ -2,7 +2,7 @@
 <%- include('header') %> 
 <body>
   <div class="wrapper">
-    <header class="header">
+    <header class="header fullScreenHideArea">
       <div class="logo_div">
         <h1 class="logo"><img src="../images/logo.png" alt="로고"></h1>
       </div>
@@ -14,12 +14,13 @@
         </ul>
         <div class="user_div">
           <p><em>D&T팀</em> Kim Youngeun</p>
+          <button class="btn_fullscreen">FULL SCREEN</button>
           <button class="btn_user ico_edit">Edit</button>
           <button class="btn_user ico_logout">Logout</button>
         </div>
       </div>
     </header>
-    <div class="container">
+    <div class="container full_screen_mode">
       <%- include('left') %> 
       <div class="content_box_loading" style="display:none;">
           <div class="div_loading">
@@ -36,6 +37,32 @@
   datepicker();
   $('#' + '<%=depth1 %>').addClass('on');
   //contentBoxHeight();
+  let _objFullScreenTarget;
+
+  $('.btn_fullscreen').on('click', function(event) {
+    $('.fullScreenHideArea').hide();
+    $('.full_screen_mode').addClass('active');
+    if(typeof designer != 'undefined') _objFullScreenTarget = designer;
+    else if(typeof spread != 'undefined') _objFullScreenTarget = spread;
+    if(_objFullScreenTarget != null) {
+    setTimeout(() => {
+        _objFullScreenTarget.refresh();
+      }, 200);
+    }
+  });
+  $(document).keydown(function(event) {
+    if ( event.keyCode == 27 || event.which == 27 ) {
+      $('.fullScreenHideArea').show();
+      $('.full_screen_mode').removeClass('active');
+      if(typeof designer != 'undefined') _objFullScreenTarget = designer;
+      else if(typeof spread != 'undefined') _objFullScreenTarget = spread;
+      if(_objFullScreenTarget != null) {
+        setTimeout(() => {
+          _objFullScreenTarget.refresh();
+        }, 200);
+      }
+    }
+  });
 </script>
 </body>
 
