--- a/views/ejs/left.ejs
+++ b/views/ejs/left.ejs
@@ -1,4 +1,4 @@
-<div class="left_nav_wrap">
+<div class="left_nav_wrap fullScreenHideArea">
     <ul class="left_nav">
         <li>
             <a href="#" class="depth1" id="INTRO"><span>INTRO</span></a>
