--- a/views/ejs/sample15.ejs
+++ b/views/ejs/sample15.ejs
@@ -25,6 +25,9 @@
     height: 100%;
     overflow: hidden;
 }
+.container.full_screen_mode.active .content_box {
+    height: calc(100vh - 56px);
+}
 </style>
 <script type="text/javascript">
     var localStorageIndex23 = "<%= sample23Index %>";
