--- a/views/ejs/sample30.ejs
+++ b/views/ejs/sample30.ejs
@@ -39,7 +39,7 @@
     </table>
 </div>
 
-<div class="content_box" style="height: calc(100vh - 360px);">
+<div class="content_box">
     <div class="sample-container">
         <div id="ss" class="sample-spreadsheets"></div>
     </div>
@@ -58,6 +58,13 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
+}
+
+.content_box {
+    height: calc(100vh - 360px);
+}
+.container.full_screen_mode.active .content_box {
+    height: calc(100vh - 122px);
 }
 
 .sample-tutorial {
