--- a/views/ejs/sample31.ejs
+++ b/views/ejs/sample31.ejs
@@ -20,6 +20,9 @@
 </div>
 
 <style>
+.container.full_screen_mode.active .content_box {
+    height: calc(100vh - 56px);
+}
 .sample-tutorial {
     position: relative;
     height: 100%;
