--- a/views/ejs/sample6.ejs
+++ b/views/ejs/sample6.ejs
@@ -41,7 +41,7 @@
   </table>
 </div>
 
-<div class="content_box" style="height: calc(100vh - 360px);">
+<div class="content_box">
   <div class="sample-tutorial">
       <div id="ss" class="sample-spreadsheets"></div>
       <div id="optionContainer" class="optionContainer">
@@ -51,6 +51,10 @@
 
 
 <style>
+.content_box {
+  height: calc(100vh - 360px);
+}
+
 .sample-tutorial {
  position: relative;
  height: 100%;
