--- a/views/ejs/sample11.ejs
+++ b/views/ejs/sample11.ejs
@@ -49,7 +49,7 @@
     </table>
 </div>
 
-<div class="content_box" style="height: calc(100vh - 360px);">
+<div class="content_box">
     <div class="sample-tutorial">
         <div id="ss" style="width:100%;height:100%"></div>
     </div>
@@ -61,6 +61,12 @@
     position: relative;
     height: 100%;
     overflow: hidden;
+}
+.content_box {
+    height: calc(100vh - 360px);
+}
+.container.full_screen_mode.active .content_box {
+    height: calc(100vh - 122px);
 }
 </style>
 <script src="js/<%= pathJs %>/sample11.js" type="text/javascript"></script>
