--- a/views/ejs/sample14.ejs
+++ b/views/ejs/sample14.ejs
@@ -46,7 +46,7 @@
     </table>
 </div>
 
-<div class="content_box" style="height: calc(100vh - 360px);">
+<div class="content_box">
     <div class="sample-tutorial">
         <div id="ss" style="width:100%;height:100%"></div>
     </div>
@@ -95,6 +95,12 @@
 
 
 <style>
+.content_box {
+    height: calc(100vh - 360px);
+}
+.container.full_screen_mode.active .content_box {
+    height: calc(100vh - 122px);
+}
 .sample-tutorial {
     position: relative;
     height: 100%;
