--- a/views/ejs/sample23.ejs
+++ b/views/ejs/sample23.ejs
@@ -31,7 +31,7 @@
     </table>
 </div>
 
-<div class="content_box" style="height: calc(100vh - 360px);">
+<div class="content_box">
     <div class="sample-tutorial">
         <div id="ss" style="width:100%;height:100%"></div>
     </div>
@@ -46,6 +46,12 @@
 }
 table.srch_tbl {
     border-top: none;
+}
+.content_box {
+    height: calc(100vh - 360px);
+}
+.container.full_screen_mode.active .content_box {
+    height: calc(100vh - 122px);
 }
 </style>
 <script src="js/<%= pathJs %>/sample23.js" type="text/javascript"></script>
