--- a/views/ejs/sample3.ejs
+++ b/views/ejs/sample3.ejs
@@ -37,7 +37,7 @@
     </table>
   </div>
 
-<div class="content_box" style="height: calc(100vh - 360px);">
+<div class="content_box">
     <div class="sample-tutorial">
         <div id="ss" class="sample-spreadsheets"></div>
         <div id="optionContainer" class="optionContainer">
@@ -48,24 +48,32 @@
 
 <style>
 .sample-tutorial {
-   position: relative;
-   height: 100%;
-   overflow: hidden;
+  position: relative;
+  height: 100%;
+  overflow: hidden;
 }
 
 body {
-   position: absolute;
-   top: 0;
-   bottom: 0;
-   left: 0;
-   right: 0;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .sample-spreadsheets {
-   width: 100%;
-   height: 100%;
-   overflow: hidden;
-   float: left;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  float: left;
+}
+
+.content_box {
+  height: calc(100vh - 360px);
+}
+
+.container.full_screen_mode.active .content_box {
+  height: calc(100vh - 122px);
 }
 </style>
 <script src="js/<%= pathJs %>/sample3.js" type="text/javascript"></script>
