--- a/views/ejs/sample5.ejs
+++ b/views/ejs/sample5.ejs
@@ -52,7 +52,7 @@
   </table>
 </div>
 
-<div class="content_box" style="height: calc(100vh - 360px); display: flex;">
+<div class="content_box" style="display: flex;">
   <div class="container-fluid" style="width: 30%;height: 100%;padding-top: 30px;">
       <div class="legend">
         <div><img src="https://status.slack.com/img/v2/TableMaintenance.png"><span>진행</span></div>
@@ -72,6 +72,12 @@
 
 
 <style>
+.content_box {
+  height: calc(100vh - 360px);
+}
+.container.full_screen_mode.active .content_box {
+    height: calc(100vh - 122px);
+}
 
 .legend {
 display: flex;
